--- a/source/less/blocks/main-header.less
+++ b/source/less/blocks/main-header.less
@@ -11,13 +11,19 @@
   position: relative;
   display: flex;
   flex-direction: row;
+  justify-content: end;
   padding-right: 18px;
   padding-left: 18px;
+  outline: 1px solid #4e205bcc;
+  outline-offset: -1px;
 }
 
 .main-header__logo {
+  position: absolute;
+  top: 0;
+  right: 50%;
+  transform: translate(50%);
   display: inline-block;
-  margin: 0 auto;
   outline: 1px solid #de9898cc;
   outline-offset: -1px;
 }
@@ -28,11 +34,8 @@
 }
 
 .main-nav__toogle {
-  position: absolute;
-  top: 0;
-  right: 0;
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
   box-sizing: content-box;
   width: 23px;
