--- a/source/less/global/global.less
+++ b/source/less/global/global.less
@@ -24,6 +24,7 @@ body {
   display: flex;
   flex-direction: column;
   min-width: 320px;
+  max-width: 320px;
   min-height: 100%;
   margin: 0;
   padding: 0;
@@ -34,6 +35,10 @@ body {
   text-transform: uppercase;
   color: #000000;
   background-color: #ffffff;
+}
+
+h2 {
+  font-size: 18px;
 }
 
 a {
