--- a/source/less/blocks/main-header.less
+++ b/source/less/blocks/main-header.less
@@ -3,8 +3,8 @@
   min-height: 56px;
   color: #000000;
   background-color: #ffffff;
-  outline: 1px solid #22b075cc;
-  outline-offset: -1px;
+  // outline: 1px solid #22b075cc; оставлено для проверки блоков
+  // outline-offset: -1px;
 }
 
 .main-header__wrapper {
@@ -14,23 +14,23 @@
   justify-content: end;
   padding-right: 18px;
   padding-left: 18px;
-  outline: 1px solid #4e205bcc;
-  outline-offset: -1px;
+  // outline: 1px solid #4e205bcc; оставлено для проверки блоков
+  // outline-offset: -1px;
 }
 
 .main-header__logo {
   position: absolute;
   top: 0;
   right: 50%;
+  display: block;
   transform: translate(50%);
-  display: inline-block;
-  outline: 1px solid #de9898cc;
-  outline-offset: -1px;
+  // outline: 1px solid #de9898cc; оставлено для проверки блоков
+  // outline-offset: -1px;
 }
 
 .main-nav {
-  outline: 1px solid #ad98decc;
-  outline-offset: -1px;
+  // outline: 1px solid #ad98decc; оставлено для проверки блоков
+  // outline-offset: -1px;
 }
 
 .main-nav__toogle {
