--- a/source/less/style.less
+++ b/source/less/style.less
@@ -2,6 +2,7 @@
 @import "./global/global.less";
 
 // blocks
+@import "./blocks/main-container.less";
 @import "./blocks/main-header.less";
 @import "./blocks/main-intro.less";
 @import "./blocks/advantages.less";
