--- a/source/less/blocks/main-intro.less
+++ b/source/less/blocks/main-intro.less
@@ -1,13 +1,17 @@
 .main-intro {
+  // видны в блоки рамки
   height: 389px;
   color: #ffffff;
-  background-color: #2d3d46;
   background-image: url("/img/intro-triangle.svg"), url("/img/bg-intro@1x.png");
+  background-color: #a7afc6;
   background-position: bottom, center;
   background-repeat: no-repeat;
+  background-size: contain;
 }
 
 .main-intro__wrapper {
+  height: inherit;
+  width: inherit;
   padding-right: 18px;
   padding-left: 18px;
 }
