--- a/source/less/global/global.less
+++ b/source/less/global/global.less
@@ -17,6 +17,7 @@
 
 // Global
 html {
+  box-sizing: border-box;
   height: 100%;
 }
 
@@ -37,8 +38,12 @@ body {
   background-color: #ffffff;
 }
 
-h2 {
+h2,
+h3,
+h4 {
   font-size: 18px;
+  line-height: 26px;
+  font-weight: 700;
 }
 
 a {
@@ -47,6 +52,10 @@ a {
 
 ul {
   list-style: none;
+}
+
+img {
+  border-style: none;
 }
 
 .visually-hidden {
