создал блок advantages-list__subject

--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -18,7 +18,7 @@
   margin: 0;
 }
 
-.advantages-list__item-first {
+.advantages-list__item {
   padding-top: 40px;
   padding-bottom: 25px;
   text-align: center;
@@ -41,13 +41,13 @@
   padding-bottom: 11px;
 }
 
-.advantages__numbering {
+.advantages-list__numbering {
   margin: 0;
   padding-bottom: 17px;
   font-weight: 700;
 }
 
-.advantages__description-excerpt {
+.advantages-list__description-excerpt {
   margin: 0;
   padding-bottom: 13px;
   font-weight: 700;
@@ -57,4 +57,18 @@
   height: 260px;
   background-image: url("/img/bg-item-picture@1x.jpg");
   background-repeat: no-repeat;
+}
+
+.advantages-list__subject-item {
+  padding-top: 33px;
+  padding-left: 48px;
+}
+
+.advantages-list__subject-title {
+  margin: 0;
+  padding-bottom: 15px;
+}
+
+.advantages-list__subject-description {
+  margin: 0;
 }
