блок advantages закончил промежуточное стилизование

--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -24,6 +24,10 @@
   text-align: center;
 }
 
+.advantages-list__item--first {
+  font-weight: 700;
+}
+
 .advantages-list__item--blue {
   color: #ffffff;
   background-color: #81b3d2;
@@ -44,31 +48,73 @@
 .advantages-list__numbering {
   margin: 0;
   padding-bottom: 17px;
-  font-weight: 700;
+  // font-weight: 700;
 }
 
 .advantages-list__description-excerpt {
   margin: 0;
   padding-bottom: 13px;
-  font-weight: 700;
+  // font-weight: 700;
 }
 
 .advantages-list__item-picture {
   height: 260px;
-  background-image: url("/img/bg-item-picture@1x.jpg");
   background-repeat: no-repeat;
 }
 
+.advantages-list__item-picture--first {
+  background-color: #9ba896;
+  background-image: url("/img/bg-item-picture-city@1x.jpg");
+}
+
+.advantages-list__subject {
+  padding-top: 25px;
+  padding-bottom: 31px;
+}
+
 .advantages-list__subject-item {
-  padding-top: 33px;
+  padding-top: 10px;
+  padding-bottom: 19px;
   padding-left: 48px;
 }
 
 .advantages-list__subject-title {
   margin: 0;
-  padding-bottom: 15px;
+  padding-bottom: 16px;
 }
 
 .advantages-list__subject-description {
   margin: 0;
+}
+
+.advantages-list__item-second {
+  padding-bottom: 16px;
+}
+
+.advantages-list__item-picture--second {
+  background-color: #d4af9c;
+  background-image: url("/img/bg-item-picture-bridge@1x.jpg");
+}
+
+.advantages-list__item--gray {
+  background-color: #eeeeee;
+}
+
+.advantages-list__item--third {
+  padding-top: 26px;
+  padding-bottom: 11px;
+}
+
+.advantages-list__item--fourth {
+  padding-top: 24px;
+  padding-bottom: 11px;
+}
+
+.advantages-list__item--fifth {
+  padding-top: 24px;
+  padding-bottom: 13px;
+}
+
+.advantages-list__subject-title--padding {
+  padding-bottom: 13px;
 }
