изменил разметку и стилизовал блок offer

--- a/source/less/global/global.less
+++ b/source/less/global/global.less
@@ -58,6 +58,18 @@ img {
   border-style: none;
 }
 
+.button {
+  display: inline-block;
+  max-width: 458px;
+  padding: 16px 20px;
+  box-sizing: border-box;
+  font-size: 18px;
+  line-height: 26px;
+  font-weight: 700;
+  color: #ffffff;
+  background-color: #81b3d2;
+}
+
 .visually-hidden {
   position: absolute;
   width: 1px;
