--- a/source/less/style.less
+++ b/source/less/style.less
@@ -6,3 +6,4 @@
 @import "./blocks/main-header.less";
 @import "./blocks/main-intro.less";
 @import "./blocks/advantages.less";
+@import "./blocks/offer.less";
