исправление в вёрстки и стилизация main-footer

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -7,3 +7,4 @@
 @import "./blocks/main-intro.less";
 @import "./blocks/advantages.less";
 @import "./blocks/offer.less";
+@import "./blocks/main-footer.less";
