--- a/source/less/blocks/main-footer.less
+++ b/source/less/blocks/main-footer.less
@@ -8,7 +8,7 @@
 
 .main-footer__hashtag {
   padding-top: 4px;
-  padding-bottom: 8px;
+  padding-bottom: 33px;
 }
 
 .hashtag {
@@ -20,15 +20,25 @@
   display: flex;
   justify-content: center;
   height: 48px;
-  max-width: 156px;
+  margin-bottom: 40px;
 }
 
 .social__list {
   display: flex;
+  max-width: 156px;
   height: inherit;
   flex-direction: row;
   justify-content: space-between;
+  margin: 0;
   padding: 0;
+}
+
+.social__item {
+  padding-right: 5px;
+
+  &:last-child {
+    padding-right: 0;
+  }
 }
 
 .social__link {
@@ -40,4 +50,22 @@
   svg {
     fill: #ffffff;
   }
+}
+
+.main-footer__copyright {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.copyright__text {
+  margin: 0;
+  padding-right: 13px;
+}
+
+.copyright__link {
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
 }
