стилизовал блок catalog-intro и добавил фото

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -8,3 +8,5 @@
 @import "./blocks/advantages.less";
 @import "./blocks/offer.less";
 @import "./blocks/main-footer.less";
+@import "./blocks/catalog-intro.less";
+
