--- a/source/less/blocks/catalog-intro.less
+++ b/source/less/blocks/catalog-intro.less
@@ -3,7 +3,10 @@
   flex-wrap: wrap;
   justify-content: center;
   height: 157px;
+  margin-bottom: 34px;
+  color: #ffffff;
   background-image: url("/img/intro-triangle.svg"), url("/img/bg-catalog-intro@1x.png");
+  background-color: #a7afc6;
   background-position: bottom, 50% 100%;
   background-repeat: no-repeat;
 }
