--- a/source/less/style.less
+++ b/source/less/style.less
@@ -9,4 +9,5 @@
 @import "./blocks/offer.less";
 @import "./blocks/main-footer.less";
 @import "./blocks/catalog-intro.less";
-
+@import "./blocks/gallery-list.less";
+@import "./blocks/presentation.less";
