--- a/source/less/blocks/gallery-list.less
+++ b/source/less/blocks/gallery-list.less
@@ -18,13 +18,15 @@
 }
 
 .gallery-list__item {
-  margin-top: 24px;
+  padding-top: 24px;
   padding-bottom: 25px;
   text-align: start;
 }
 
 .gallery-list__photo {
-  padding-bottom: 9px;
+  display: inline-block;
+  margin-bottom: 9px;
+  background-color: #edbbaa;
 }
 
 .gallery-list__item-subject {
