добавил в папку глобал стилей

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,5 +1,7 @@
 // global
 @import "./global/global.less";
+@import "./global/variables.less";
+@import "./global/fonts.less";
 
 // blocks
 @import "./blocks/main-container.less";
