обновил стилизацию в main-header и maint intro  на главной странице  и добавил картинок

--- a/source/less/blocks/main-intro.less
+++ b/source/less/blocks/main-intro.less
@@ -2,11 +2,11 @@
   // видны в блоки рамки
   height: 389px;
   color: #ffffff;
-  background-image: url("/img/intro-triangle.svg"), url("/img/bg-intro@1x.png");
+  background-image: url("/img/intro-triangle-mobile.svg"), url("/img/bg-intro-mobile.png");
   background-color: #a7afc6;
   background-position: bottom, center;
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: contain, cover;
 }
 
 .main-intro__wrapper {
@@ -17,6 +17,25 @@
 }
 
 .main-intro__name {
+  display: block;
+  margin: 0  auto;
   padding-top: 90px;
   padding-bottom: 85px;
+}
+
+@media (min-width: @tablet-width) {
+  .main-intro {
+    height: 518px;
+    background-image: url("/img/intro-triangle-tablet.svg"), url("/img/bg-intro-tablet.png");
+  }
+
+  .main-intro__name {
+    width: 461px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .main-intro {
+    background-image: url("/img/intro-triangle-desktop.svg"), url("/img/bg-intro-desktop.png");
+  }
 }
