--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,11 +1,18 @@
 // global
-@import "./global/global.less";
+
 @import "./global/variables.less";
+@import "./global/global.less";
 @import "./global/fonts.less";
+@import "./global/page.less";
+@import "./global/button.less";
 
 // blocks
+
+
 @import "./blocks/main-container.less";
 @import "./blocks/main-header.less";
+@import "./blocks/main-nav.less";
+@import "./blocks/site-list.less";
 @import "./blocks/main-intro.less";
 @import "./blocks/advantages.less";
 @import "./blocks/offer.less";
@@ -13,3 +20,4 @@
 @import "./blocks/catalog-intro.less";
 @import "./blocks/gallery-list.less";
 @import "./blocks/presentation.less";
+
