--- a/source/less/blocks/main-header.less
+++ b/source/less/blocks/main-header.less
@@ -1,21 +1,15 @@
 .main-header {
   z-index: 11;
   min-height: 56px;
-  color: #000000;
-  background-color: #ffffff;
-  // outline: 1px solid #22b075cc; оставлено для проверки блоков
-  // outline-offset: -1px;
+  outline: 3px solid rgba(34, 176, 117, 0.8);
+  outline-offset: -3px;
 }
 
 .main-header__wrapper {
-  position: relative;
-  display: flex;
-  flex-direction: row;
-  justify-content: end;
   padding-right: 18px;
   padding-left: 18px;
-  // outline: 1px solid #4e205bcc; оставлено для проверки блоков
-  // outline-offset: -1px;
+  outline: 3px solid #4e205bcc;
+  outline-offset: -3px;
 }
 
 .main-header__logo {
@@ -23,23 +17,14 @@
   top: 0;
   right: 50%;
   display: block;
+  height: 96px;
   transform: translate(50%);
-  // outline: 1px solid #de9898cc; оставлено для проверки блоков
-  // outline-offset: -1px;
+  outline: 3px solid #de9898cc;
+  outline-offset: -3px;
 }
 
-.main-nav {
-  // outline: 1px solid #ad98decc; оставлено для проверки блоков
-  // outline-offset: -1px;
-}
-
-.main-nav__toogle {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  box-sizing: content-box;
-  width: 23px;
-  height: 22px;
-  padding: 17px 12px;
-  border: 0;
+@media (min-width: @tablet-width) {
+  .main-header__logo {
+    display: none;
+  }
 }
