стилизация блоков и добавление картинок

--- a/source/less/blocks/main-header.less
+++ b/source/less/blocks/main-header.less
@@ -6,6 +6,7 @@
 }
 
 .main-header__wrapper {
+  min-height: 56px;
   padding-right: 18px;
   padding-left: 18px;
   outline: 3px solid #4e205bcc;
@@ -13,18 +14,38 @@
 }
 
 .main-header__logo {
+  position: relative;
+  display: block;
+  width: 185px;
+  margin: 0 auto;
+  margin-bottom: -45px;
+  // position: absolute;
+  // top: 0;
+  // right: 50%;
+  // display: block;
+  // height: 96px;
+  // transform: translate(50%);
+  // outline: 3px solid #de9898cc;
+  // outline-offset: -3px;
+  // пока не уверен верно
+}
+
+.main-nav {
   position: absolute;
   top: 0;
-  right: 50%;
-  display: block;
-  height: 96px;
-  transform: translate(50%);
-  outline: 3px solid #de9898cc;
-  outline-offset: -3px;
+  right: 15px;
 }
 
 @media (min-width: @tablet-width) {
   .main-header__logo {
     display: none;
+  }
+
+  .main-header__wrapper {
+    padding: 0;
+  }
+
+  .main-nav {
+    position: relative;
   }
 }
