--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,7 +1,6 @@
 // @import "./blocks/main-nav.less";
 
 .main-nav {
-  text-align: center;
   outline: 3px solid #ad98decc;
   outline-offset: -3px;
 }
@@ -27,7 +26,8 @@
 
 @media (min-width: @tablet-width) {
   .main-nav {
-    width: 768px;
+    top: 0;
+    right: 0;
     margin: 0 auto;
   }
 
