--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -65,6 +65,9 @@
 .advantages-list__item-picture--first {
   background-color: #9ba896;
   background-image: url("/img/bg-item-picture-city@1x.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .advantages-list__subject {
@@ -94,9 +97,11 @@
 .advantages-list__item-picture--second {
   background-color: #d4af9c;
   background-image: url("/img/bg-item-picture-bridge@1x.jpg");
+  background-size: cover;
 }
 
 .advantages-list__item--gray {
+  width: 100%;
   background-color: #eeeeee;
 }
 
@@ -117,4 +122,74 @@
 
 .advantages-list__subject-title--padding {
   padding-bottom: 13px;
+}
+
+@media (min-width: @tablet-width) {
+  .advantages-list__header {
+    padding-top: 47px;
+    padding-bottom: 17px;
+    text-align: center;
+  }
+
+  .advantages-list__title {
+    padding-bottom: 29px;
+    font-size: 21px;
+    line-height: 26px;
+  }
+
+  .advantages-list__title br:first-child {
+    display: none;
+  }
+
+  .advantages-list__item--triangle {
+    background-image: none;
+  }
+
+  .advantages-list__wrapper-block {
+    height: 256px;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .advantages-list__item--first {
+    min-width: 256px;
+  }
+
+  .advantages-list__item-picture--first {
+    width: 100%;
+    height: 256px;
+    background-image: url("/img/bg-item-picture-city-tablet.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  .advantages-list__subject {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  .advantages-list__wrapper-block--reverse {
+    display: flex;
+    flex-direction: row-reverse;
+  }
+
+  .advantages-list__item-picture--second {
+    width: 100%;
+    background-image: url("/img/bg-item-picture-bridge-tablet.jpg");
+    background-size: cover;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .advantages-list__item-picture--first {
+    min-width: 800px;
+    background-image: url("/img/bg-item-picture-city-desktop.jpg");
+  }
+
+  .advantages-list__item-picture--second {
+    width: 100%;
+    background-image: url("/img/bg-item-picture-bridge-desktop.jpg");
+    background-size: cover;
+  }
 }
