--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -5,25 +5,42 @@
 
 @media (min-width: @tablet-width) {
   .site-list {
-    min-height: 56px;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    align-items: center;
+    min-height: 56px;
+    grid-template-columns: 1fr 1fr 185px 1fr 1fr;
+    margin: 0;
+  }
+
+  .site-list__item {
+    display: flex;
+    justify-content: center;
   }
 
   .site-list__item a {
+    display: inline-block;
+    padding-top: 18px;
+    padding-right: 20px;
+    padding-left: 20px;
+    padding-bottom: 18px;
     font-weight: 700;
   }
 
   .site-list__logo {
     display: block;
-    position: relative;
+    margin-top: 0;
+    margin-right: -10px;
+    margin-bottom: -50px;
   }
 
-  .site-list__link {
-    width: 185px;
-    position: absolute;
-    top: -27px;
-    left: -15px;
+  .site-list__logo .site-list__link {
+    padding: 0;
+    text-align: center;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .site-list__logo {
+    margin-right: auto;
+    margin-left: auto;
   }
 }
