--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -156,7 +156,6 @@
   }
 
   .advantages-list__item-picture--first {
-    width: 100%;
     height: 256px;
     background-image: url("/img/bg-item-picture-city-tablet.jpg");
     background-position: center;
@@ -175,7 +174,7 @@
   }
 
   .advantages-list__item-picture--second {
-    width: 100%;
+    height: 256px;
     background-image: url("/img/bg-item-picture-bridge-tablet.jpg");
     background-size: cover;
   }
@@ -192,7 +191,6 @@
   }
 
   .advantages-list__item-picture--second {
-    width: 100%;
     background-image: url("/img/bg-item-picture-bridge-desktop.jpg");
     background-size: cover;
   }
