--- a/source/less/style.less
+++ b/source/less/style.less
@@ -17,6 +17,7 @@
 @import "./blocks/advantages.less";
 @import "./blocks/offer.less";
 @import "./blocks/main-footer.less";
+@import "./blocks/main-catalog.less";
 @import "./blocks/inner-intro.less";
 @import "./blocks/gallery-list.less";
 @import "./blocks/presentation.less";
