создал main-form__wrapper

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -10,6 +10,7 @@
 
 
 @import "./blocks/main-container.less";
+@import "./blocks/main-form.less";
 @import "./blocks/main-header.less";
 @import "./blocks/main-nav.less";
 @import "./blocks/site-list.less";
