стилизовал review.less

--- a/source/less/blocks/main-form.less
+++ b/source/less/blocks/main-form.less
@@ -5,6 +5,12 @@
   padding-left: 20px;
 }
 
+.main-form__wrapper--flex {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+}
+
 @media (min-width: @tablet-width) {
   .main-form__wrapper {
     padding-right: 60px;
