--- a/source/less/style.less
+++ b/source/less/style.less
@@ -22,4 +22,5 @@
 @import "./blocks/inner-intro.less";
 @import "./blocks/gallery-list.less";
 @import "./blocks/presentation.less";
-
+@import "./blocks/review.less";
+@import "./blocks/testimonials-form.less";
