--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -36,8 +36,8 @@
 .main-nav--closed .main-nav__toggle:active::before {
   background-color: fade(@blue, 30%);
   box-shadow:
-    0 5px 0 0 fade(@blue, 30%),
-    0 10px 0 0 fade(@blue, 30%);
+    0 9px 0 0 fade(@blue, 30%),
+    0 18px 0 0 fade(@blue, 30%);
 }
 
 @media (max-width: @mobile-width-only) {
@@ -50,17 +50,21 @@
     padding-left: 60px;
     text-align: center;
   }
-}
 
-.main-nav--opened .site-list__item:last-child::before {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  z-index: 2;
-  height: 7px;
-  min-width: 100%;
-  background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.2) 100%);
+  .main-nav--opened .site-list__item:last-child::before {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    z-index: 2;
+    height: 7px;
+    min-width: 100%;
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.2) 100%);
+  }
+
+  .main-nav--nojs .main-nav__toggle {
+    display: none;
+  }
 }
 
 .main-nav--opened .main-nav__toggle {
