--- a/source/less/blocks/offer.less
+++ b/source/less/blocks/offer.less
@@ -40,6 +40,12 @@
   background-size: 27px, cover;
 }
 
+.offer__map iframe {
+  display: block;
+  width: 100%;
+  border: none;
+}
+
 @media (min-width: @tablet-width) {
   .offer__sentence {
     font-size: 30px;
