--- a/source/less/blocks/offer.less
+++ b/source/less/blocks/offer.less
@@ -47,9 +47,18 @@
 }
 
 @media (min-width: @tablet-width) {
+  .offer__wrapper {
+    margin-bottom: 9px;
+  }
+
   .offer__sentence {
+    padding-bottom: 30px;
     font-size: 30px;
     line-height: 26px;
+  }
+
+  .offer__description {
+    padding-bottom: 42px;
   }
 
   .offer__description br:first-child,
@@ -63,6 +72,7 @@
 
   .offer__button {
     width: 458px;
+    padding-bottom: 18px;
   }
 
   .offer__map {
