стилизовал кнопки в футуре

--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -147,7 +147,7 @@
   padding-bottom: 13px;
 }
 
-.advantages-list__subject-title--padding {
+.advantages-list__subject-title-padding {
   padding-bottom: 13px;
 }
 
@@ -304,6 +304,12 @@
   .advantages-list__item-picture--first {
     min-width: 800px;
     background-image: url("/img/bg-item-picture-city-desktop.jpg");
+  }
+
+  .advantages-list__subject {
+    gap: 4%;
+    margin-bottom: 23px;
+    padding-top: 45px;
   }
 
   .advantages-list__item-picture--second {
