--- a/source/less/blocks/offer.less
+++ b/source/less/blocks/offer.less
@@ -28,6 +28,26 @@
   width: 284px;
   margin-bottom: 10px;
   font-size: 21px;
+
+  &:hover {
+    background-color: #669ec0;
+  }
+
+  &:active {
+    color: fade(@white, 30%);
+    background-color: #5496bd;
+  }
+}
+
+.offer__button--disabled {
+  background-color: #e5e5e5;
+  cursor: not-allowed;
+
+  &:hover,
+  &:active {
+    color: @white;
+    background-color: #e5e5e5;
+  }
 }
 
 .offer__map {
@@ -85,6 +105,14 @@
 }
 
 @media (min-width: @desktop-width) {
+  .offer__wrapper {
+    margin-bottom: 17px;
+  }
+
+  .offer__description {
+    padding-bottom: 45px;
+  }
+
   .offer__map {
     background-image: url("/img/offer-map-marker.svg"), url("/img/offer-map-desktop.png");
   }
