стилизация мобильной формы и добавление картинок и фавиконки

--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -36,7 +36,7 @@
 }
 
 .advantages-list__item--triangle {
-  background-image: url("/img/top-triangle.svg");
+  background-image: url("../img/top-triangle.svg");
   background-position: top;
   background-repeat: no-repeat;
   background-size: 100% 37px;
@@ -79,7 +79,7 @@
 
 .advantages-list__item-picture--first {
   background-color: #9ba896;
-  background-image: url("/img/bg-item-picture-city@1x.jpg");
+  background-image: url("../img/bg-item-picture-city@1x.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -124,7 +124,7 @@
 
 .advantages-list__item-picture--second {
   background-color: #d4af9c;
-  background-image: url("/img/bg-item-picture-bridge@1x.jpg");
+  background-image: url("../img/bg-item-picture-bridge@1x.jpg");
   background-size: cover;
 }
 
@@ -201,7 +201,7 @@
   .advantages-list__item-picture--first {
     height: 256px;
     min-width: 512px;
-    background-image: url("/img/bg-item-picture-city-tablet.jpg");
+    background-image: url("../img/bg-item-picture-city-tablet.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -267,7 +267,7 @@
   .advantages-list__item-picture--second {
     height: 256px;
     min-width: 512px;
-    background-image: url("/img/bg-item-picture-bridge-tablet.jpg");
+    background-image: url("../img/bg-item-picture-bridge-tablet.jpg");
     background-size: cover;
   }
 
@@ -303,7 +303,7 @@
 
   .advantages-list__item-picture--first {
     min-width: 800px;
-    background-image: url("/img/bg-item-picture-city-desktop.jpg");
+    background-image: url("../img/bg-item-picture-city-desktop.jpg");
   }
 
   .advantages-list__subject {
@@ -314,7 +314,7 @@
 
   .advantages-list__item-picture--second {
     min-width: 800px;
-    background-image: url("/img/bg-item-picture-bridge-desktop.jpg");
+    background-image: url("../img/bg-item-picture-bridge-desktop.jpg");
     background-size: cover;
   }
 }
