--- a/source/less/blocks/testimonials-filters.less
+++ b/source/less/blocks/testimonials-filters.less
@@ -1,10 +1,12 @@
 // @import "./blocks/testimonials-filters.less";
 
 .testimonials-filters__group {
+  width: 100%;
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
   align-items: flex-start;
+  margin-bottom: 28px;
   padding-top: 24px;
 }
 
@@ -13,7 +15,247 @@
   font-size: 18px;
   line-height: 26px;
   font-weight: 700;
+  text-align: center;
   align-self: center;
+}
+
+.field {
+  width: 100%;
+  padding-bottom: 14px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+}
+
+.field__name {
+  padding-left: 15px;
+  font-size: 14px;
+  line-height: 21px;
+  font-weight: 400;
+
+  sup {
+    position: relative;
+    top: 4px;
+  }
+}
+
+.field__input {
+  padding-top: 17px;
+  padding-right: 10px;
+  padding-bottom: 15px;
+  padding-left: 10px;
+  font-family: "PT Sans", "Arial", sans-serif;
+  font-size: 18px;
+  line-height: 26px;
+  font-weight: 700;
+  color: @black;
+  background-color: #f2f2f2;
+  border: none;
+  outline: none;
+
+  &::placeholder {
+    padding-left: 5px;
+    color: @black;
+  }
+}
+
+.field-contact {
+  width: 100%;
+  padding-bottom: 10px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+}
+
+.field-contact__name {
+  padding-left: 15px;
+  font-size: 14px;
+  line-height: 21px;
+  font-weight: 400;
+
+  sup {
+    position: relative;
+    top: 4px;
+  }
+}
+
+.field-contact__input {
+  padding-top: 17px;
+  padding-right: 10px;
+  padding-bottom: 15px;
+  padding-left: 10px;
+  font-family: "PT Sans", "Arial", sans-serif;
+  font-size: 18px;
+  line-height: 26px;
+  font-weight: 700;
+  color: @black;
+  background-color: #f2f2f2;
+  background-image: url("../img/phone.png");
+  background-position: right;
+  background-repeat: no-repeat;
+  border: none;
+  outline: none;
+
+  &::placeholder {
+    padding-left: 5px;
+    color: fade(@black, 30%);
+  }
+}
+
+.field-contact:nth-of-type(2) .field-contact__input {
+  background-image: url("../img/email.png");
+}
+
+.radio-button {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+}
+
+.radio-button__label {
+  position: relative;
+  padding-top: 14px;
+  padding-bottom: 22px;
+  padding-left: 62px;
+}
+
+.radio-button__label:last-child {
+  padding-bottom: 6px;
+}
+
+.radio-button__mark {
+  position: absolute;
+  top: 2px;
+  left: 0;
+  width: 46px;
+  height: 46px;
+  background-color: #f2f2f2;
+}
+
+.radio-button__input + .radio-button__mark {
+  border-radius: 50%;
+}
+
+.radio-button__input:checked + .radio-button__mark::before {
+  content: "";
+  position: absolute;
+  top: 15px;
+  left: 15px;
+  width: 16px;
+  height: 16px;
+  background-color: @black;
+  border-radius: 50%;
+}
+
+.radio-button__text {
+  font-size: 18px;
+  line-height: 26px;
+  font-weight: 700;
+  text-transform: none;
+}
+
+.checkbox {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+}
+
+.checkbox__label {
+  position: relative;
+  padding-top: 14px;
+  padding-bottom: 22px;
+  padding-left: 62px;
+}
+
+.checkbox__text::before {
+  content: "";
+  position: absolute;
+  top: 3px;
+  left: 0;
+  width: 46px;
+  height: 46px;
+  background-color: #f2f2f2;
+  border-radius: 4px;
+}
+
+.checkbox__input:checked + .checkbox__text::after {
+  content: "";
+  position: absolute;
+  top: 16px;
+  left: 13px;
+  width: 16px;
+  height: 10px;
+  border-bottom: 3px solid @black;
+  border-left: 3px solid @black;
+  transform: rotate(-50deg);
+}
+
+.checkbox__label:last-child {
+  padding-bottom: 6px;
+}
+
+.checkbox__text {
+  font-size: 18px;
+  line-height: 26px;
+  font-weight: 700;
+  text-transform: none;
+}
+
+.textarea {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+}
+
+.textarea__text {
+  min-height: 118px;
+  margin-top: 6px;
+  padding: 16px;
+  font-family: "PT Sans", "Arial", sans-serif;
+  font-size: 18px;
+  line-height: 26px;
+  font-weight: 700;
+  color: @black;
+  background-color: #f2f2f2;
+  border: none;
+  outline: none;
+  resize: none;
+}
+
+.textarea__text::placeholder {
+  font-size: 18px;
+  line-height: 26px;
+  font-weight: 700;
+  color: fade(@black, 30%);
+}
+
+.form-button {
+  padding-top: 26px;
+  align-items: flex-end;
+}
+
+.testimonials-filters__button {
+  width: 280px;
+  padding-top: 19px;
+  padding-bottom: 15px;
+  font-family: "PT Sans", "Arial", sans-serif;
+  font-size: 21px;
+  line-height: 26px;
+  text-transform: uppercase;
+}
+
+.testimonials-filters__marked {
+  font-size: 12px;
+  line-height: 21px;
+  color: fade(#333333, 60%);
+
+  sup {
+    position: relative;
+    top: 5px;
+  }
 }
 
 @media (min-width: @tablet-width) {
