закончил сттилизацию планшетной и десктопной версии

--- a/source/less/blocks/inner-intro.less
+++ b/source/less/blocks/inner-intro.less
@@ -7,7 +7,7 @@
   height: 157px;
   margin-bottom: 34px;
   color: #ffffff;
-  background-image: url("/img/intro-triangle.svg"), url("/img/bg-inner-intro-mobile.png");
+  background-image: url("../img/intro-triangle.svg"), url("../img/bg-inner-intro-mobile.png");
   background-color: #a7afc6;
   background-position: bottom, 50% 100%;
   background-repeat: no-repeat;
@@ -23,7 +23,7 @@
 @media (min-width: @tablet-width) {
   .inner-intro {
     height: 290px;
-    background-image: url("/img/intro-triangle.svg"), url("/img/bg-inner-intro-tablet.png");
+    background-image: url("../img/intro-triangle.svg"), url("../img/bg-inner-intro-tablet.png");
   }
 
   .inner-intro__name {
@@ -35,7 +35,7 @@
   .inner-intro {
     height: 300px;
     margin-bottom: 72px;
-    background-image: url("/img/intro-triangle.svg"), url("/img/bg-inner-intro-desktop.png");
+    background-image: url("../img/intro-triangle.svg"), url("../img/bg-inner-intro-desktop.png");
   }
 
   .inner-intro__name {
