--- a/source/less/blocks/main-intro.less
+++ b/source/less/blocks/main-intro.less
@@ -2,7 +2,7 @@
   // видны в блоки рамки
   height: 389px;
   color: #ffffff;
-  background-image: url("/img/intro-triangle.svg"), url("/img/bg-intro-mobile.png");
+  background-image: url("../img/intro-triangle.svg"), url("../img/bg-intro-mobile.png");
   background-color: #a7afc6;
   background-position: bottom, center;
   background-repeat: no-repeat;
@@ -26,7 +26,7 @@
 @media (min-width: @tablet-width) {
   .main-intro {
     height: 518px;
-    background-image: url("/img/intro-triangle.svg"), url("/img/bg-intro-tablet.png");
+    background-image: url("../img/intro-triangle.svg"), url("../img/bg-intro-tablet.png");
   }
 
   .main-intro__name {
@@ -38,6 +38,6 @@
 
 @media (min-width: @desktop-width) {
   .main-intro {
-    background-image: url("/img/intro-triangle.svg"), url("/img/bg-intro-desktop.png");
+    background-image: url("../img/intro-triangle.svg"), url("../img/bg-intro-desktop.png");
   }
 }
