--- a/source/less/blocks/offer.less
+++ b/source/less/blocks/offer.less
@@ -53,7 +53,7 @@
 .offer__map {
   height: 350px;
   margin-bottom: 19px;
-  background-image: url("/img/offer-map-marker.svg"), url("/img/offer-map-mobile.png");
+  background-image: url("../img/offer-map-marker.svg"), url("../img/offer-map-mobile.png");
   background-position: center, center;
   background-repeat: no-repeat;
   background-color: #d3e3b4;
@@ -97,7 +97,7 @@
 
   .offer__map {
     height: 350px;
-    background-image: url("/img/offer-map-marker.svg"), url("/img/offer-map-tablet.png");
+    background-image: url("../img/offer-map-marker.svg"), url("../img/offer-map-tablet.png");
     background-position: center, center;
     background-repeat: no-repeat;
     background-size: 27px, cover;
@@ -114,6 +114,6 @@
   }
 
   .offer__map {
-    background-image: url("/img/offer-map-marker.svg"), url("/img/offer-map-desktop.png");
+    background-image: url("../img/offer-map-marker.svg"), url("../img/offer-map-desktop.png");
   }
 }
