--- a/source/less/blocks/presentation.less
+++ b/source/less/blocks/presentation.less
@@ -30,7 +30,7 @@
 .presentation__video-image {
   color: #ffffff;
   background-color: #cabdb6;
-  background-image: url("/img/icon-play.png"), url("/img/bg-video-mobile@1x.png");
+  background-image: url("../img/icon-play.png"), url("../img/bg-video-mobile@1x.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: initial, cover;
@@ -62,7 +62,7 @@
   .presentation__video-image {
     width: 648px;
     height: 500px;
-    background-image: url("/img/icon-play.png"), url("/img/bg-video-tablet.png");
+    background-image: url("../img/icon-play.png"), url("../img/bg-video-tablet.png");
   }
 
   @media (min-width: @desktop-width) {
@@ -72,7 +72,7 @@
 
     .presentation__video-image {
       width: 800px;
-      background-image: url("/img/icon-play.png"), url("/img/bg-video-desktop.png");
+      background-image: url("../img/icon-play.png"), url("../img/bg-video-desktop.png");
     }
   }
 }
