--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -55,12 +55,12 @@
     border: none;
 
     &:hover {
-      background-color: @white;
+      background-color: transparent;
     }
 
     &:active {
       color: @black;
-      background-color: @white;
+      background-color: transparent;
     }
   }
 
